Splynx API connection set up
