# src/Routes/customers.routes.ts
@@ -1,8 +1,12 @@
 import express from "express";
-import { exportCustomer } from "../Controller/customers.controller";
+import {
+  exportCustomer,
+  getSplynxCustomerRoute,
+} from "../Controller/customers.controller";
 
 const routes = express.Router();
 
 routes.get("/export", exportCustomer);
+routes.get("/:id", getSplynxCustomerRoute);
 
 export default routes;
